Add line of sight analysis feature with corresponding UI and backend integration
Introduced a new route for the line of sight analysis tool, including a dedicated HTML template and JavaScript for handling elevation data. Updated the main navigation to include a link to the new feature. Added end-to-end tests to ensure functionality and proper loading of elevation data. The feature allows users to analyze RF line-of-sight and visualize elevation profiles between two nodes.

--- a/src/malla/templates/base.html
+++ b/src/malla/templates/base.html
@@ -166,7 +166,7 @@
 
                     <!-- Tools dropdown -->
                     <li class="nav-item dropdown">
-                        {% set tools_active = request.endpoint in ['traceroute.traceroute_hops', 'gateway.gateway_compare', 'main.longest_links'] %}
+                        {% set tools_active = request.endpoint in ['traceroute.traceroute_hops', 'gateway.gateway_compare', 'main.longest_links', 'main.line_of_sight'] %}
                         <a class="nav-link dropdown-toggle {{ 'active' if tools_active }}" href="#" id="toolsDropdown" role="button" data-bs-toggle="dropdown">
                             <i class="bi bi-tools"></i> Tools
                         </a>
@@ -184,6 +184,11 @@
                             <li>
                                 <a class="dropdown-item" href="{{ url_for('main.longest_links') }}">
                                     <i class="bi bi-rulers"></i> Longest Links
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('main.line_of_sight') }}">
+                                    <i class="bi bi-bezier"></i> Line of Sight
                                 </a>
                             </li>
                         </ul>
