Update line of sight icons in templates and tests
Replaced the "bi-mountains" and "bi-graph-up" icons with "bi-bezier" in the line of sight HTML templates and corresponding test assertions. This change ensures consistency in the user interface and improves the visual representation of the line of sight analysis feature.

--- a/src/malla/templates/map.html
+++ b/src/malla/templates/map.html
@@ -1603,7 +1603,7 @@ function createLinkPopupContent(link) {
                 </button>
                 ${hasLocations ? `
                 <button class="btn btn-sm btn-success" onclick="showLineOfSightModal(${link.from_node_id}, ${link.to_node_id})">
-                    <i class="bi bi-graph-up"></i> Line of Sight
+                    <i class="bi bi-bezier"></i> Line of Sight
                 </button>
                 ` : ''}
             </div>
