--- a/src/malla/templates/line_of_sight.html
+++ b/src/malla/templates/line_of_sight.html
@@ -128,7 +128,7 @@
 {% block content %}
 <div class="row mb-4">
     <div class="col-12">
-        <h1><i class="bi bi-mountains"></i> Line of Sight Analysis</h1>
+        <h1><i class="bi bi-bezier"></i> Line of Sight Analysis</h1>
         <p class="text-muted">Analyze RF line-of-sight and Fresnel zone clearance between two nodes using terrain elevation data</p>
     </div>
 </div>
@@ -230,7 +230,7 @@
                         </p>
                     </div>
                     <div class="col-md-6">
-                        <h5 class="mb-3"><i class="bi bi-graph-up"></i> Analysis Result</h5>
+                        <h5 class="mb-3"><i class="bi bi-bezier"></i> Analysis Result</h5>
                         <div id="analysisStatusBadge" class="mb-3"></div>
                     </div>
                 </div>
