--- a/src/malla/templates/map.html
+++ b/src/malla/templates/map.html
@@ -1602,7 +1602,7 @@ function createLinkPopupContent(link) {
                     View History
                 </button>
                 ${hasLocations ? `
-                <button class="btn btn-sm btn-success" onclick="showLineOfSightModal(${link.from_node_id}, ${link.to_node_id})">
+                <button class="btn btn-sm btn-success" onclick="showLineOfSight(${link.from_node_id}, ${link.to_node_id})">
                     <i class="bi bi-bezier"></i> Line of Sight
                 </button>
                 ` : ''}
